<resources>
    <string name="app_name" translatable="false">PDF Reader</string>
    <string name="header_error_text" translatable="false">Oops…</string>
    <string name="error_text">Sorry…</string>
    <string name="close_text">Close</string>
    <string name="confirm_text">OK</string>
    <string name="understood_text">OK! Understood</string>
    <string name="loading_text">Loading…</string>
    <string name="loading_file_text">Loading files…</string>
    <string name="loading_locked_file_text">Finding password protected files…</string>
    <string name="download_not_success_text">Download not success…</string>
    <string name="download_success_text">Download success to Download folder</string>
    <string name="confirm_message">Are you sure?</string>
    <string name="confirm_cancel_current_action">Are you sure to stop this action? This might interrupt your data sync.\n</string>
    <string name="confirm_override_file">This file is existed, do you want to override it?\n</string>
    <string name="yes_text">Yes</string>
    <string name="no_text">No</string>
    <string name="warning_text">Warning</string>
    <string name="success_text">success</string>
    <string name="please_wait_text">Please wait a moment</string>
    <string name="please_input_name_text">Please input file name.</string>
    <string name="exit_text">Exit</string>
    <string name="downloading_from_gg_drive_text">Loading from cloud server</string>
    <string name="loading_from_local_text">Loading from local file</string>
    <string name="not_now_text">Not now</string>
    <string name="agree_text">Agree</string>
    <string name="giant_permission_text">Giant permission</string>
    <string name="guide_text">Select file guide</string>
    <string name="cancel_text">Cancel</string>
    <string name="retry_text">Retry</string>
    <string name="delete_success_text">Delete success…</string>
    <string name="delete_fail_text">Can not delete now…</string>
    <string name="loading_ads_text">Loading Ads</string>
    <string name="thankyou_text">Thank you</string>
    <string name="system_data_issue_text">Can not complete this action. Please try again.</string>
    <string name="can_not_connect_to_network_text">Application can not connect to network.</string>
    <string name="connect_to_network_success_text">Connect to network successful.</string>
    <string name="function_not_support_text">This function is not supported now.</string>
    <string name="description_time_just_now">Just now</string>
    <string name="description_time_minute">minute</string>
    <string name="description_time_hour">hour</string>
    <string name="description_time_day">day</string>
    <string name="description_time_month">month</string>
    <string name="description_time_year">year</string>
    <string name="description_time_ago">ago</string>
    <string name="title_need_permission">Permission Request</string>
    <string name="title_need_permission_fail">Permission Request Fail</string>
    <string name="couldnt_get_file_now">Application could not get local file now. Please retry later.\n</string>
    <string name="reject_read_file">\nYou can accept this permission later.\n</string>
    <string name="couldnt_create_file_now">Application could not create file now. Please retry later.\n</string>
    <string name="need_permission_to_get_file">\nPDF Reader needs Manage External Storage permission to view and create files.\n</string>
    <string name="need_permission_to_create_file">PDF Reader needs Manage External Storage permission to create files.\n</string>
    <string name="get_file_now">Application will get local file right now.</string>
    <string name="thank_you_for_support">Thank you for your support.\n</string>
    <string name="create_file_now">Application will create file right now.</string>
    <string name="system_data_issue">Data is not valid. Please try again.</string>
    <string name="share_file_title">Share this file</string>
    <string name="share_chooser">Select app to send message…</string>
    <string name="rate_us_title">Rate us</string>
    <string name="example_password">Password</string>
    <string name="example_re_enter_password">Retype password</string>
    <string name="no_file_found">No file found!</string>
    <string name="no_pdf_found">No PDF file found!</string>
    <string name="no_file_in_folder_found">Empty folder!</string>
    <string name="can_not_open_folder">Can not open folder now.</string>
    <string name="can_not_open_file">Can not open file now.</string>
    <string name="can_not_select_file">Select file not successfully. Please choose file from Local storage or Google drive app only.</string>
    <string name="can_not_select_file_from_selector">Select file not successfully.</string>
    <string name="can_not_select_file_from_google_drive">Error while download file from Cloud server.</string>
    <string name="view_file">View file</string>
    <string name="guide_to_select_multiple">\n\nLong touch to item to get multiple files.\n\n</string>
    <string name="loading_from_google_drive">Loading from cloud server. This may take a minute.</string>
    <string name="confirm_delete_file_title">Delete file</string>
    <string name="confirm_delete_file_message">Are you sure to delete this file permanently? You can NOT restore it later.\n</string>
    <string name="accept_permission_file_selector">Accept storage permission</string>
    <string name="data_not_valid">Sorry. Data is not valid. We can\'t create pdf now.</string>
    <string name="done_create_pdf_title">Result</string>
    <string name="file_not_found">File is not exist</string>
    <string name="sort_not_available">Sort function is NOT available now.</string>
    <string name="create_file_success">Saved PDF file successfully!</string>
    <string name="create_txt_success">Saved TXT file successfully!</string>
    <string name="converting_success_pdf">Converted to PDF file successfully!</string>
    <string name="set_pass">Set password</string>
    <string name="add_watermark">Add watermark</string>
    <string name="pdf_type" translatable="false">application/pdf</string>
    <string name="txt_type" translatable="false">text/*</string>
    <string name="excel_type" translatable="false">text/*</string>
    <string name="word_type" translatable="false">text/*</string>
    <string name="image_type" translatable="false">image/*</string>
    <string name="prefix_for_google_drive" translatable="false">File_from_cloud_server_</string>
    <string name="default_notification_channel_id" translatable="false">PDF Reader</string>
    <string name="word_file" translatable="false">Word</string>
    <string name="txt_file" translatable="false">Txt</string>
    <string name="excel_file" translatable="false">Excel</string>
    <string name="title_navigation_lib">All File</string>
    <string name="title_navigation_lib_header">All files</string>
    <string name="title_navigation_bookmark">Bookmark</string>
    <string name="title_navigation_history">Recent</string>
    <string name="title_navigation_browser">Browser</string>
    <string name="title_navigation_news">More</string>
    <string name="image_to_pdf">Image to PDF</string>
    <string name="protect_pdf" translatable="false">Protect PDF</string>
    <string name="unlock_pdf" translatable="false">Unlock PDF</string>
    <string name="view_pdf" translatable="false">View pdf file</string>
    <string name="accept_permission_show_pdf">Discover PDF files</string>
    <string name="sort_by_date">Sort by Date</string>
    <string name="sort_by_name">Sort by Name</string>
    <string name="sort_by_size">Sort by Size (Increase) </string>
    <string name="sort_by_size_revert">Sort by Size (Decrease) </string>
    <string name="my_pdf_title">My File</string>
    <string name="rename_enter_new_name">Rename pdf file</string>
    <string name="rename_enter_new_name_content">Please enter new name</string>
    <string name="rename_please_input_password">Please input new name</string>
    <string name="can_not_edit_video_name">Can not edit file name.</string>
    <string name="duplicate_video_name">File name is duplicated</string>
    <string name="rename_file_success">Rename file success</string>
    <string name="bookmark_title">Bookmark</string>
    <string name="bookmark_save_success">Save bookmark file successfully</string>
    <string name="bookmark_remove_success">Remove bookmark file successfully</string>
    <string name="recent_remove_success">Remove history file successfully</string>
    <string name="generate_pdf">Convert to PDF</string>
    <string name="image_to_pdf_nothing_to_clear">Please select file first.</string>
    <string name="creating_pdf">Creating pdf…</string>
    <string name="creating_success_pdf">Create success</string>
    <string name="creating_fail_pdf">Create fail</string>
    <string name="open_file">Select app</string>
    <string name="open_file_error">No app to read this File</string>
    <string name="protect_pdf_title" translatable="false">Protect pdf</string>
    <string name="protect_pdf_select_file" translatable="false">File explorer</string>
    <string name="protect_pdf_select_other_file" translatable="false">Select other pdf</string>
    <string name="protect_pdf_start_set_password" translatable="false">Start set password</string>
    <string name="protect_pdf_select_file_title" translatable="false">"Select a File"</string>
    <string name="protect_pdf_please_enter_password">Please enter your password</string>
    <string name="protect_pdf_please_reenter_password">Please enter your confirm password</string>
    <string name="protect_pdf_password_not_match">Your passwords are not matched</string>
    <string name="protect_pdf_add_password_error">Error occurred while set password. Please re-try again.</string>
    <string name="protect_pdf_add_password_success">Set password success: </string>
    <string name="protect_pdf_encrypted_file_name" translatable="false">_set_password.pdf</string>
    <string name="protect_pdf_file_already_set_password">Selected file is already set password.</string>
    <string name="protect_pdf_file_is_encrypted_before">Selected file is set password before.</string>
    <string name="unlock_pdf_title" translatable="false">Unlock pdf</string>
    <string name="unlock_pdf_select_file" translatable="false">File explorer</string>
    <string name="unlock_pdf_select_other_file" translatable="false">Select other pdf</string>
    <string name="unlock_pdf_start_remove_password" translatable="false">Start remove password</string>
    <string name="unlock_pdf_select_file_title" translatable="false">"Select a File"</string>
    <string name="unlock_pdf_please_enter_password">Please enter old password</string>
    <string name="unlock_pdf_enter_wrong_password">Your password is incorrect.</string>
    <string name="unlock_pdf_add_password_error">Error occurred while remove password. Maybe your password is incorrect.</string>
    <string name="unlock_pdf_add_password_success">Remove password success: </string>
    <string name="unlock_pdf_encrypted_file_name" translatable="false">_remove_password.pdf</string>
    <string name="unlock_pdf_file_not_encrypted_before">Selected file is not set password before.</string>
    <string name="option_dialog_file_name">Enter file name</string>
    <string name="option_dialog_password">Enter password</string>
    <string name="crop_image_title">Crop image</string>
    <string name="more_locked_add_bm">Bookmark</string>
    <string name="more_locked_share">Share</string>
    <string name="more_locked_delete">Delete</string>
    <string name="title_navigation_more" translatable="false">More</string>
    <string name="more_locked_merge" translatable="false">Merge PDF</string>
    <string name="more_rename" translatable="false">Rename</string>
    <string name="more_save_drive" translatable="false">Save in Drive</string>
    <string name="more_print" translatable="false">Print</string>
</resources>