<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:enabled="true"
        android:icon="@drawable/ic_menu_all_file"
        android:title="@string/title_navigation_lib" />


    <item
        android:id="@+id/navigation_history"
        android:enabled="true"
        android:icon="@drawable/ic_menu_history"
        android:title="@string/title_navigation_history" />
    <item
        android:id="@+id/nullitem"
        android:enabled="false"
        android:title="@null"></item>
    <item
        android:id="@+id/navigation_bookmark"
        android:enabled="true"
        android:icon="@drawable/ic_menu_bookmark"
        android:title="@string/title_navigation_bookmark" />

    <item
        android:id="@+id/navigation_more"
        android:enabled="true"
        android:icon="@drawable/ic_menu_news"
        android:title="@string/title_navigation_more" />
</menu>