<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/bg_file_option"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="30dp"
        android:paddingTop="18dp"
        android:paddingEnd="30dp"
        android:paddingBottom="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription">

        <ImageView
            android:id="@+id/more_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_all_pdf_file_full"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/more_name"
            style="@style/HuyCommonTextStyle"
            android:layout_width="171dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLines="1"
            android:textSize="@dimen/title_second_component_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.17"
            app:layout_constraintStart_toEndOf="@+id/more_icon"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.26999998"
            tools:text="Sample Locked File.pdf" />

        <TextView
            android:id="@+id/more_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"

            android:layout_weight="1"
            android:maxLines="1"
            app:layout_constraintBottom_toBottomOf="@+id/more_size"
            app:layout_constraintStart_toEndOf="@+id/more_size"
            tools:text="Sample Locked File.pdf" />

        <TextView
            android:id="@+id/more_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:maxLines="1"
            app:layout_constraintStart_toEndOf="@+id/more_icon"
            app:layout_constraintTop_toBottomOf="@+id/more_name"
            tools:text="5MB" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/bg_border_line_common"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/common_padding_big">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/more_layout_share"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp"
                android:paddingStart="30dp"
                android:foreground="?attr/selectableItemBackground"
                tools:ignore="ContentDescription">

                <ImageView
                    android:id="@+id/more_imageview_share"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_more_locked_file_share" />

                <TextView
                    android:id="@+id/more_textview_share"
                    style="@style/HuyCommonTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="22dp"
                    android:layout_marginEnd="22dp"
                    android:layout_weight="1"
                    android:text="@string/more_locked_share"
                    android:textSize="@dimen/title_second_component_text_size"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/more_imageview_share"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/more_layout_coppy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp"
                android:paddingStart="30dp"
                android:foreground="?attr/selectableItemBackground"
                tools:ignore="ContentDescription">

                <ImageView
                    android:id="@+id/copy_imageview_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_more_locked_file_add_bm" />

                <TextView
                    android:id="@+id/copy_textview_name"
                    style="@style/HuyCommonTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="22dp"
                    android:layout_marginEnd="22dp"
                    android:layout_weight="1"
                    android:text="Copy"
                    android:textSize="@dimen/title_second_component_text_size"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/copy_imageview_name"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/more_layout_merge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp"
                android:paddingStart="30dp"
                android:foreground="?attr/selectableItemBackground"
                tools:ignore="ContentDescription">

                <ImageView
                    android:id="@+id/more_imageview_merge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_camera_image" />

                <TextView
                    android:id="@+id/more_textview_share_as_image"
                    style="@style/HuyCommonTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="22dp"
                    android:layout_marginEnd="22dp"
                    android:layout_weight="1"
                    android:text="@string/more_locked_merge"
                    android:textSize="@dimen/title_second_component_text_size"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/more_imageview_merge"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/more_layout_add_bm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp"
                android:paddingStart="30dp"
                android:foreground="?attr/selectableItemBackground"
                tools:ignore="ContentDescription">

                <ImageView
                    android:id="@+id/more_imageview_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_more_locked_file_add_bm" />

                <TextView
                    android:id="@+id/more_textview_name"
                    style="@style/HuyCommonTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="22dp"
                    android:layout_marginEnd="22dp"
                    android:layout_weight="1"
                    android:text="@string/more_locked_add_bm"
                    android:textSize="@dimen/title_second_component_text_size"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/more_imageview_name"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/more_layout_rename"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp"
                android:paddingStart="30dp"
                android:foreground="?attr/selectableItemBackground"
                tools:ignore="ContentDescription">

                <ImageView
                    android:id="@+id/more_imageview_rename"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_more_locked_file_lock" />

                <TextView
                    android:id="@+id/more_textview_rename"
                    style="@style/HuyCommonTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="22dp"
                    android:layout_marginEnd="22dp"
                    android:layout_weight="1"
                    android:text="@string/more_rename"
                    android:textSize="@dimen/title_second_component_text_size"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/more_imageview_rename"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/more_layout_save_drive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp"
                android:paddingStart="30dp"
                android:foreground="?attr/selectableItemBackground"
                tools:ignore="ContentDescription">

                <ImageView
                    android:id="@+id/more_imageview_save_drive"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_more_locked_file_lock" />

                <TextView
                    android:id="@+id/more_textview_save_drive"
                    style="@style/HuyCommonTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="22dp"
                    android:layout_marginEnd="22dp"
                    android:layout_weight="1"
                    android:text="@string/more_save_drive"
                    android:textSize="@dimen/title_second_component_text_size"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/more_imageview_save_drive"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/more_layout_print"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp"
                android:paddingStart="30dp"
                android:foreground="?attr/selectableItemBackground"
                tools:ignore="ContentDescription">

                <ImageView
                    android:id="@+id/more_imageview_print"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_more_locked_file_lock" />

                <TextView
                    android:id="@+id/more_textview_print"
                    style="@style/HuyCommonTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="22dp"
                    android:layout_marginEnd="22dp"
                    android:layout_weight="1"
                    android:text="@string/more_print"
                    android:textSize="@dimen/title_second_component_text_size"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/more_imageview_print"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/more_layout_delete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp"
                android:paddingStart="30dp"
                android:foreground="?attr/selectableItemBackground"
                tools:ignore="ContentDescription">

                <ImageView
                    android:id="@+id/more_imageview_delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_more_locked_file_delete" />

                <TextView
                    android:id="@+id/more_textview_delete"
                    style="@style/HuyCommonTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="22dp"
                    android:layout_marginEnd="22dp"
                    android:layout_weight="1"
                    android:text="@string/more_locked_delete"
                    android:textSize="@dimen/title_second_component_text_size"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/more_imageview_delete"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>